BT_ Tao form quan ly tac giia va do du lieu

--- a/QLTV/QLTV.csproj
+++ b/QLTV/QLTV.csproj
@@ -124,6 +124,12 @@
     <Compile Include="GUI\cnNXB.Designer.cs">
       <DependentUpon>cnNXB.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\cnTacGia.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\cnTacGia.Designer.cs">
+      <DependentUpon>cnTacGia.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\cnTheLoai.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\cnNXB.resx">
       <DependentUpon>cnNXB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\cnTacGia.resx">
+      <DependentUpon>cnTacGia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\cnTheLoai.resx">
       <DependentUpon>cnTheLoai.cs</DependentUpon>
